# baboteek

./: README.md  pyproject.toml
baboteek-api/: pyproject.toml
baboteek-api/src/baboteek_api/: config.py  database.py  main.py  models.py
baboteek-api/src/baboteek_api/auth/: router.py  service.py  utils.py
baboteek-api/src/baboteek_api/compiler/: models.py  router.py  service.py
baboteek-backend/: main.py  pyproject.toml
baboteek-backend/app/: config.py
baboteek-core/: pyproject.toml
baboteek-core/src/baboteek_core/: __init__.py  lexical.py  semantic.py  syntax.py
docs/: user_guide.md
